tests/error/undefined_var.liva
// Error test: undefined variable
// Expected error: use of undeclared identifier 'undefined_var'

func main() {
    println(undefined_var)
}
